개발 환경을 위한 Docker 명령어 추가 및 OLLAMA 관련 환경 변수 설정

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,6 +26,8 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       # 로깅 설정
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - OLLAMA_HOST=${OLLAMA_HOST:-http://192.168.0.11:11434}
+      - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen3:8b-q8_0}
     networks:
       - ontology-network
     restart: unless-stopped
