--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,8 @@ services:
       - NEO4J_SEARCH_DEFAULT_DOMAIN=${NEO4J_SEARCH_DEFAULT_DOMAIN:-}
       - NEO4J_SEARCH_CYPHER_FILE=${NEO4J_SEARCH_CYPHER_FILE:-api/config/graph_search.cypher}
       - GRAPH_SEARCH_KEYS=${GRAPH_SEARCH_KEYS:-}
+      - OLLAMA_HOST=${OLLAMA_HOST:-http://192.168.0.11:11434}
+      - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen3:8b-q8_0}
     networks:
       - ontology-network
     volumes:
