--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,25 @@ requires-python = ">=3.10"
 dependencies = [
     "anyio>=4.10.0",
     "fastapi>=0.116.1",
+    "icecream>=2.1.8",
     "langchain>=0.3.27",
     "langchain-ollama>=0.3.7",
+    "langgraph>=0.6.7",
     "loguru>=0.7.3",
     "neo4j>=5.28.2",
     "openai>=1.106.1",
     "opensearch-py>=3.0.0",
+    "plotly>=5.0.0",
     "pydantic-settings>=2.10.1",
     "pyvis>=0.3.2",
     "streamlit>=1.49.1",
     "typer>=0.17.4",
     "uvicorn>=0.35.0",
     "yfinance>=0.2.65",
+    "dart-fss>=0.4.0",
+    "requests>=2.31.0",
+    "aiosqlite>=0.20.0",
+    "asyncpg>=0.29.0",
+    "aiomysql>=0.2.0",
+    "langchain-community>=0.3.29",
 ]
