docs: CLAUDE.md에 Python 실행 방법 및 주의사항 추가, debug_search_issue.py 및 manage_cache.py 파일 추가

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,6 +26,10 @@ services:
       - NEWS_EMBEDDING_INDEX=${NEWS_EMBEDDING_INDEX:-news_article_embedding}
       # OpenAI 설정
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      # Langfuse 트레이싱 설정
+      - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY:-}
+      - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY:-}
+      - LANGFUSE_HOST=${LANGFUSE_HOST:-}
       # 기타 설정
       - NEO4J_SEARCH_LOOKBACK_DAYS=${NEO4J_SEARCH_LOOKBACK_DAYS:-180}
       - NEO4J_SEARCH_DEFAULT_DOMAIN=${NEO4J_SEARCH_DEFAULT_DOMAIN:-}
@@ -33,6 +37,10 @@ services:
       - GRAPH_SEARCH_KEYS=${GRAPH_SEARCH_KEYS:-}
       - OLLAMA_HOST=${OLLAMA_HOST:-http://192.168.0.11:11434}
       - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen3:8b-q8_0}
+      # Redis 설정
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379}
+    depends_on:
+      - redis
     networks:
       - ontology-network
     volumes:
@@ -41,6 +49,19 @@ services:
       - ./uv.lock:/app/uv.lock
     restart: unless-stopped
     command: ["uv", "run", "uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+  # Redis (캐시 서버)
+  redis:
+    image: redis:7-alpine
+    container_name: ontology-chat-redis-dev
+    ports:
+      - "6380:6379"
+    volumes:
+      - redis-data:/data
+    networks:
+      - ontology-network
+    restart: unless-stopped
+    command: redis-server --appendonly yes
 
   # UI 서버 (개발용)
   ui:
@@ -55,6 +76,7 @@ services:
       - PYTHONPATH=/app
     depends_on:
       - api
+      - redis
     networks:
       - ontology-network
     volumes:
@@ -65,6 +87,9 @@ services:
     command: ["uv", "run", "streamlit", "run", "ui/main.py", "--server.address", "0.0.0.0", "--server.port", "8501", "--server.runOnSave", "true"]
 
 
+
+volumes:
+  redis-data:
 
 networks:
   ontology-network:
