--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,6 +24,10 @@ services:
       - OPENSEARCH_PASSWORD=${OPENSEARCH_PASSWORD}
       # OpenAI 설정
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      # Langfuse 트레이싱 설정
+      - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
+      - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
+      - LANGFUSE_HOST=${LANGFUSE_HOST}
       # 로깅 설정
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - OLLAMA_HOST=${OLLAMA_HOST:-http://192.168.0.11:11434}
