feat: 다수의 테스트 파일 추가 및 성능 분석 대시보드 구현
- A급 품질 달성을 위한 성능 테스트 파일(test_a_grade_performance.py) 추가
- 컨텍스트 캐싱 메커니즘 테스트 파일(test_context_cache.py) 추가
- 컨텍스트 다양성 최적화 테스트 파일(test_context_diversity.py) 추가
- 컨텍스트 엔지니어링 기반 질의 응답 품질 검증 시스템 파일(test_context_engineering_quality.py) 추가
- 현재 적용된 모든 기능의 종합 품질 테스트 파일(test_current_quality.py) 추가
- 다양한 쿼리 테스트 및 분석 파일(test_real_query.py) 추가
- 성능 분석 및 병목 지점 찾기 파일(test_performance_analysis.py) 추가
- Streamlit 기반 성능 분석 대시보드 구현
- 기타 여러 테스트 파일 추가 및 개선

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,29 @@
 {
-    "python-envs.defaultEnvManager": "ms-python.python:poetry",
-    "python-envs.defaultPackageManager": "ms-python.python:poetry",
-    "python-envs.pythonProjects": [],
-    "makefile.configureOnOpen": false
+  "claude.rules": {
+    "codeStyle": {
+      "preferKoreanComments": true,
+      "asyncFirst": true,
+      "explicitErrorHandling": true,
+      "noUnnecessaryWrappers": true
+    },
+    "performance": {
+      "requireCaching": true,
+      "instanceReuse": true,
+      "timeoutRequired": true,
+      "parallelProcessing": true
+    },
+    "quality": {
+      "maintainAGrade": true,
+      "minimumScore": 0.9,
+      "regressionTesting": true,
+      "performanceMonitoring": true
+    },
+    "architecture": {
+      "useExistingPackages": true,
+      "avoidWrappers": true,
+      "removeDuplication": true,
+      "simplicity": true
+    }
+  },
+  "makefile.configureOnOpen": false
 }
