feat: 캐시 관리 API 테스트 스크립트 및 코딩 표준 문서 추가
- 캐시 관리 API를 테스트하기 위한 스크립트(test_cache_api.sh) 추가
- 캐시 성능 및 관리 관련 코딩 표준 문서(CODING_STANDARDS.md) 추가
- 모니터링 관련 설정 파일 및 대시보드 추가
- Prometheus 및 Grafana 설정 파일 업데이트

--- a/monitoring/grafana/datasources/prometheus.yml
+++ b/monitoring/grafana/datasources/prometheus.yml
@@ -6,4 +6,25 @@ datasources:
     access: proxy
     url: http://prometheus:9090
     isDefault: true
-    editable: true
+    editable: false
+    jsonData:
+      timeInterval: "5s"
+      queryTimeout: "60s"
+      httpMethod: "GET"
+
+  - name: Langfuse
+    type: postgres
+    access: proxy
+    url: langfuse-db:5432
+    database: langfuse
+    user: langfuse
+    secureJsonData:
+      password: "langfuse_password"
+    jsonData:
+      sslmode: "disable"
+      maxOpenConns: 100
+      maxIdleConns: 100
+      maxIdleConnsAuto: true
+      connMaxLifetime: 14400
+      postgresVersion: 1500
+      timescaledb: false
