--- a/monitoring/grafana/dashboards/dashboard.yml
+++ b/monitoring/grafana/dashboards/dashboard.yml
@@ -1,12 +1,14 @@
 apiVersion: 1
 
 providers:
-  - name: 'default'
+  - name: 'ontology-chat-dashboards'
     orgId: 1
-    folder: ''
+    folder: 'Ontology Chat'
     type: file
     disableDeletion: false
-    updateIntervalSeconds: 10
+    editable: true
+    updateIntervalSeconds: 30
     allowUiUpdates: true
     options:
       path: /etc/grafana/provisioning/dashboards
+      foldersFromFilesStructure: true
